# terra-OBIA

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
api/terra_api/: __init__.py  auth.py  config.py  main.py  middleware.py  schemas.py
api/terra_api/routes/: health.py  jobs.py  models.py  review.py
api/terra_api/services/: job_runner.py  job_store.py  model_registry.py  review.py
core/terra_core/: __init__.py
core/terra_core/classification/: __init__.py  base.py  config.py  evaluation.py  factory.py  features.py  models.py  registry.py  stand_delineation.py  training.py
core/terra_core/export/: __init__.py  gis.py
core/terra_core/io/: __init__.py  cog.py
core/terra_core/segmentation/: __init__.py  base.py  classical.py  config.py  deep.py  factory.py  features.py  merge.py  models.py  reproducibility.py  vectorize.py
docs/: IMPLEMENTATION_STATUS.md  api.md  architecture.md  classification.md  dashboard.md  etl.md  pipeline.md  segmentation.md
docs/decisions/: ADR-0001-cog-tiled-processing.md  ADR-0002-learned-segmentation.md
infra/: README.md
infra/docker/: Dockerfile.api
infra/terraform/: main.tf
pipeline/terra_pipeline/: __init__.py  ingest.py  models.py
pipeline/terra_pipeline/etl/: __init__.py  config.py  folder_loader.py  inventory_labels_etl.py  manifest.py  orthoimagery_etl.py  schema.py  synthetic.py  training_export.py
pipeline/terra_pipeline/ingestion/: __init__.py  cog_converter.py  detector.py  reader.py  sentinel2.py
pipeline/terra_pipeline/orchestration/: __init__.py  runner.py
scripts/: check_doc_status.sh
tests/: __init__.py  conftest.py  test_api.py  test_api_integration.py  test_classification.py  test_etl_folder_loader.py  test_etl_model_handoff.py  test_etl_synthetic.py  test_export.py  test_pipeline.py  test_segmentation.py  test_tiling.py
tests/fixtures/: __init__.py  classification.py  rasters.py  segmentation.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: index.css
web/src/api/: client.ts
(+27 files in other folders)
